[project]
name = "ViaMontana"
version = "0.1.0"
description = "Multiday Swiss hut-to-hut hiking planner"
requires-python = ">=3.11"
dependencies = [
  "pandas",
  "geopandas",
  "pyogrio",
  "folium",
  "shapely",
  "pyproj",
  "scipy",
  "networkx",
  "pydantic",
  "typer",
  "rich",
  "requests",
  "pyarrow",
  "pytest",
]

[project.optional-dependencies]
prototype = ["streamlit"]
api = ["fastapi", "uvicorn"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
py-modules = ["load_hut_data", "find_nearby_huts", "find_hiking_routes"]
